# LSSLauncher2.0

./: pyproject.toml
src/lsslauncher/: api.py  main.py
src/lsslauncher/utils/: __init__.py  api.py  auth.py  dota_patcher.py  download.py  helpers.py  hwid.py  install_pack.py  logging2loguru.py  navigator.py  screen_manager.py
tests/: test.py
